# massSight

./: .Rbuildignore  .gitignore  .lintr  CITATION.cff  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  NEWS.md  README.Rmd  README.md  README.qmd  _pkgdown.yml  massSight_combine.Rmd  notes.md  presentation.qmd  pyproject.toml  references.bib  test.stan
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  publish.yml
R/: RcppExports.R  align_isolated_compounds.R  align_pre_isolated_compounds.R  align_utils.R  auto_align.R  auto_align_WORK.R  auto_combine.R  auto_scale.R  cd2csv.R  cluster.R  coarse_results.R  consolidate.R  detect_adducts.R  detect_isotopes.R  distribution_plot.R  filter_intensities.R  final_plots.R  final_results.R  find_all_matches.R  find_closest_match.R  find_isolated_compounds.R  find_isolated_compounds_WORK.r  get_cutoffs.R  get_molecular_weights.R  get_vectors.R  helpers.R  iso_dbscan.R  logging.R  massSight-package.R  mass_combine.R  matchPPA.R  ml_match.R  model_drift.R  msobject-class.R  normalize.R  objects.R  plotting-util.R  plotting.R  plotting_util.R  run_app.R  (+4 more)
data/: CN-1.csv  CN-2.csv  CP-1.csv  CP-2.csv  HP-3.csv  HP-4.csv  df1.rda  df1_small.rda  df2.rda  df2_small.rda  hp1.rda  hp1_ms.rda  hp2.rda  hp2_ms.rda  hp3.rda  hp3_ms.rda  hp4.rda  hp4_ms.rda  ihmp_qc_samples.rda  ms1.rda  ms2.rda  st001519_qc_samples.rda
docs/: 404.html  CLAUDE.html  CONTRIBUTING.html  LICENSE.html  _quarto.yml  authors.html  build.sh  index.html  index.qmd  notes.html  objects.json  pkgdown.yml  references.bib  search.json  sitemap.xml
docs/_site/: index.html  index.md  search.json
docs/_site/reference/: index.html  match_ml.html
docs/articles/: bt-474_analysis.html  example_alignment.html  iHMP_software_comp.html  index.html  massSight_iHMP_PRISM.html
docs/news/: index.html
docs/reference/: MSObject-class.html  MergedMSObject-class.html  _sidebar.yml  auto_align.html  auto_combine.html  auto_scale.html  cd2csv.html  cluster.html  consolidate.html  consolidate_isotopes.html  create_ms_obj.html  detect_adducts.html  detect_isotopes.html  distribution_plot.html  evaluate_matches.html  filter_intensities.html  final_plots.html  get_known_pairs.html  get_unique_matches.html  index.html  index.qmd  load_data.html  load_ihmp_data.html  massSight-package.html  massSight.html  mass_combine.html  match_ml.qmd  ml_match.html  pipe.html  run_massSight_app.html
docs/tutorials/: clustering-multiple-studies.qmd  feature-stats-examples.qmd  index.qmd  matching-two-studies.qmd  pathway-workflow.qmd  reuse-workbench.qmd  reviewer-demo.qmd
docs/vignettes/: sim_matching_mi.qmd
examples/reviewer_demo/: README.md  expected_summary.json  study_a.csv  study_b.csv  verify_outputs.py
inst/: WORDLIST
inst/R/: ml-match-test.R
inst/extdata/: Fransoza_mtb.map.tsv  Jacobs_mtb.map.tsv
man/: MSObject-class.Rd  MergedMSObject-class.Rd  apply_semisupervised_learning.Rd  auto_align.Rd  auto_align_WORK.Rd  auto_combine.Rd  auto_scale.Rd  calculate_local_mean.Rd  calculate_local_sd.Rd  cd2csv.Rd  cluster.Rd  compute_match_metrics.Rd  consolidate.Rd  consolidate_isotopes.Rd  create_enhanced_training_data.Rd  create_ms_obj.Rd  detect_adducts.Rd  detect_isotopes.Rd  distribution_plot.Rd  evaluate_matches.Rd  extract_advanced_features.Rd  filter_intensities.Rd  final_plots.Rd  generate_potential_pairs.Rd  get_known_pairs.Rd  get_shared_metabolites.Rd  get_unique_matches.Rd  load_data.Rd  load_ihmp_data.Rd  massSight-package.Rd  mass_combine.Rd  ml_match.Rd  plot_decision_boundary.Rd  plot_feature_importance.Rd  predict_with_constraints.Rd  prepare_prediction_data.Rd  run_massSight_app.Rd  train_rf_model.Rd
massSight/docs/: _quarto.yml
mass_combine_python/: pyproject.toml
mass_combine_python/src/mass_combine_python/: core.py  main.py
notebooks/: tmp.ipynb
notebooks/data/: DS1.csv  DS2.csv
src/: RcppExports.cpp  findClosestMatch.cpp  getVectors.cpp
src/mass_combine_python/: main.py
src/mass_sight/: __init__.py  __init__.pyi  adduct_grouping.py  assignment_sampling.py  cli.py  core.py  evaluation.py  khipu.py  lcms_utils.py  main.py  match_engine.py  matcher.py  mi_fold_change.py  ml_matcher.py  multi_dataset_matcher.py  multi_match.py  multistudy.py  structure_graph.py  workbench.py  workbench_finder_tui.py
tests/: test_bdot_candidate_expansion.py  test_cli_reuse.py  test_cli_run_manifest.py  test_cv_feature.py  test_multistudy_full_join.py  test_mz_global_shift.py  test_rt_transferability.py  test_sbdot_structure.py  test_structure_graph_local_rt.py  test_workbench_metadata.py  testthat.R
tests/testthat/: test-auto_combine.R  test-mass_combine.R  test-ml_match.R
vignettes/: .gitignore  ML_Match.Rmd  bt-474_analysis.Rmd  example_alignment.Rmd  iHMP_software_comp.Rmd  massSight_combine.Rmd  massSight_iHMP_PRISM.Rmd
(+1 files in other folders)
