[project]
name = "mass-sight"
version = "0.1.0"
description = "ML-based LC–MS matching, multi-dataset alignment, and MI fold-change"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "lightgbm",
    "joblib",
]

authors = [
  {name = "Chiraag", email = "37530396+chi-raag@users.noreply.github.com"}
]
license = { file = "LICENSE.md" }
keywords = ["metabolomics", "LC-MS", "alignment", "probability calibration", "lightgbm"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.scripts]
mass-sight = "mass_sight.cli:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "quartodoc>=0.11.1",
]
